--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+ /* SVG */
+ svg path,
+ svg rect{
+   fill: black;
+ }
 
+/* Animaciones de Fotos */
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
