--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,47 @@
-<section>
-    <!-- <h1 style="margin-bottom: 10px; margin-top: 15px;">Nuestras líneas...</h1> -->
+<section style="padding-top: 10px;">
+
+    <!-- SLIDER -->
+    <div id="rg-gallery" class="rg-gallery">
+        <div class="rg-thumbs">
+            <!-- Elastislide Carousel Thumbnail Viewer -->
+            <div class="es-carousel-wrapper">
+                <div class="es-nav">
+                    <span class="es-nav-prev">Previous</span>
+                    <span class="es-nav-next">Next</span>
+                </div>
+                <div class="es-carousel">
+                    <ul>
+                        <li>
+                            <a href="#"><img src="assets/images/thumbs/1.jpg" data-large="assets/images/1.jpg" alt="image01" 
+                                data-description="Adidas XXXXXXXXXXXXXXXXXXXXXXXXX" /></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="assets/images/thumbs/2.jpg" data-large="assets/images/2.jpg" alt="image02" 
+                                data-description="A plaintful story from a sistering vale" /></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="assets/images/thumbs/3.jpg" data-large="assets/images/3.jpg" alt="image03" 
+                                data-description="A plaintful story from a sistering vale" /></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="assets/images/thumbs/4.jpg" data-large="assets/images/4.jpg" alt="image04" 
+                                data-description="My spirits to attend this double voice accorded" /></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="assets/images/thumbs/5.jpg" data-large="assets/images/5.jpg" alt="image05" 
+                                data-description="And down I laid to list the sad-tuned tale" /></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End Elastislide Carousel Thumbnail Viewer -->
+        </div><!-- rg-thumbs -->
+    </div><!-- rg-gallery -->
+    <!-- FIN SLIDER -->
+
+    <br>
+
+    <!-- CATEGORIAS DE PRODUCTOS -->
 
     <div style="height: 500px; width: 30%; float: left; margin: 10px;">
         <a [routerLink]="['/principal']" class="rk-item ae-masonry__item">
