--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,21 @@ header{
   color: rgb(49, 49, 175);
 }
 
+/* SLIDER */
+.rg-image img {
+  max-height: 400px !important;
+}
+
+.rg-image-wrapper {
+  height: 500px;
+}
+
+.rg-image-wrapper p {
+  font-size: 24px;
+  color: white;
+  font-weight: bold;
+}
+
  /* SVG */
  svg path,
  svg rect{
